create_event_new

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,3 +4,8 @@
 @import "footer";
 @import "event";
 @import "slider";
+@import "bootstrap";
+@import "font-awesome";
+@import "tempusdominus-bootstrap-4.css";
+@import "google_map";
+@import "events_new";
