--- a/app/assets/stylesheets/_event.scss
+++ b/app/assets/stylesheets/_event.scss
@@ -1,5 +1,18 @@
 .event {
   height: 300px;
   width: 300px;
-  background-color: whitesmoke;
+  margin-right: 15px;
+  // border: solid 1px black;
+  box-shadow: 0 0 8px gray;
+}
+
+.event img {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.main-center {
+  display: flex;
+  justify-content: space-between;
 }
