--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,38 @@
   </head>
 
   <body>
+    <div class='header'>
+      <div class='header__left'>
+        <%= link_to root_path do %>
+          <div class='header__left__logo'>
+            sutudy_group
+          </div>
+        <% end %>
+      </div>
+      <div class='header__right'>
+        <div class='header__right__menu'>
+          <%= link_to new_user_session_path do %>
+            <div class='login'>
+              ログイン
+            </div>
+          <% end %>
+          <%= link_to new_user_registration_path do %>
+            <div class='sign_up'>
+              アカウント作成
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+
+
     <%= yield %>
+
+
+    <footer class='footer'>
+      <div class='copywright'>
+        <p><span>©︎study_group</span></p>
+      </div>
+    </footer>
   </body>
 </html>
