--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,26 +1,3 @@
-<div class='header'>
-  <div class='header__left'>
-    <div class='header__left__logo'>
-      sutudy_group
-    </div>
-  </div>
-  <div class='header__right'>
-    <div class='header__right__menu'>
-      <%= link_to new_user_session_path do%>
-        <div class='login'>
-          ログイン
-        </div>
-      <% end %>
-      <%= link_to new_user_registration_path do%>
-        <div class='sign_up'>
-          アカウント作成
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
-
-
 <div class='slider'>
 </div>
 
@@ -29,14 +6,26 @@
   <h1 class='main-center__header'>勉強会一覧</h1>
   <div class='main-center'>
     <div class='event'>
-
+      <h3>12/19 17:00 ~ 20:00</h3>
+      <%= image_tag 'coworking-space.jpg' , width: 200, hight: 200 %>
+      <div>
+        <span>場所</span>
+        <p>渋谷ソラスタ</p>
+        <span>概要</span>
+        <p>railsの基本についての勉強会です</p>
+      </div>
+    </div>
+    <div class='event'>
+      
+    </div>
+    <div class='event'>
+      
+    </div>
+    <div class='event'>
+      
+    </div>
+    <div class='event'>
+      
     </div>
   </div>
 </main>
-
-
-<footer class='footer'>
-  <div class='copywright'>
-    <p><span>©︎study_group</span></p>
-  </div>
-</footer>
