create_server_event

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -31,12 +31,11 @@
   margin-right: auto;
 }
 
-.login {
+.header_menu {
   color: white;
   padding: 0 15px;
 }
 
-.sign_up {
-  color: white;
-  padding: 0 10px;
+.header_margin {
+  margin-top: 80px;
 }
