--- a/app/assets/stylesheets/_event.scss
+++ b/app/assets/stylesheets/_event.scss
@@ -2,8 +2,12 @@
   height: 300px;
   width: 300px;
   margin-right: 15px;
-  // border: solid 1px black;
   box-shadow: 0 0 8px gray;
+  font-size: 15px;
+}
+
+.event_start_time {
+  font-size: 15px;
 }
 
 .event img {
@@ -14,5 +18,4 @@
 
 .main-center {
   display: flex;
-  justify-content: space-between;
 }
