--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,31 +1,9 @@
 <div class='slider'>
 </div>
 
-
 <main class='main'>
   <h1 class='main-center__header'>勉強会一覧</h1>
   <div class='main-center'>
-    <div class='event'>
-      <h3>12/19 17:00 ~ 20:00</h3>
-      <%= image_tag 'coworking-space.jpg' , width: 200, hight: 200 %>
-      <div>
-        <span>場所</span>
-        <p>渋谷ソラスタ</p>
-        <span>概要</span>
-        <p>railsの基本についての勉強会です</p>
-      </div>
-    </div>
-    <div class='event'>
-      
-    </div>
-    <div class='event'>
-      
-    </div>
-    <div class='event'>
-      
-    </div>
-    <div class='event'>
-      
-    </div>
+    <%= render partial: 'event', collection: @events %>
   </div>
 </main>
