--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "main";
 @import "footer";
 @import "event";
+@import "user";
 @import "slider";
 @import "bootstrap";
 @import "font-awesome";
