--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -6,4 +6,8 @@
   <div class='main-center'>
     <%= render partial: 'event', collection: @events %>
   </div>
+  <h1 class='main-center__header'>ユーザー一覧</h1>
+  <div class='main-center'>
+    <%= render partial: 'user', collection: @users %>
+  </div>
 </main>
