--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,5 @@
 <div class='new_main'>
-  <%= form_with model: @event, local: true do |f| %>
+  <%= form_with model: @event, local: true, class: "form" do |f| %>
     <div>
       <%= f.label :title %>
       <%= f.text_field :title %>
