--- a/app/views/top/_user.html.erb
+++ b/app/views/top/_user.html.erb
@@ -1,3 +1,13 @@
 <div class='user'>
   <h3><%= user.nickname %></h3>
+  <% if current_user != user %>
+    <% if user.followed_by?(current_user) %>
+      <%= link_to 'フォロー解除', user_relationships_path(user.id), method: :delete %>
+    <% else %>
+      <%= link_to 'フォローする', user_relationships_path(user.id), method: :post %>
+    <% end %>
+  <% end %>
+  <p><%= "フォロー数#{user.active_relationships.count}" %></p>
+  <p><%= "フォロワー数#{user.passive_relationships.count}" %></p>
+  
 </div>
