--- a/app/assets/stylesheets/_events_new.scss
+++ b/app/assets/stylesheets/_events_new.scss
@@ -1,3 +1,11 @@
 .new_main {
   margin-top: 80px;
+  width: 100%;
+}
+
+.event_new_title {
+  margin: 0 auto;
+  padding: 20px;
+  width: 800px;
+  text-align: center;
 }
