--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,40 @@
-<h2>Sign up</h2>
+<h1 class="event_new_title">アカウント作成</h1>
+<div class="form_conteiner">
+  <div class="form_field">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form") do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="field-first">
+        <%= f.label :nickname, class: "field_label" %>
+        <span class="require">必須</span>
+        <%= f.text_field :nickname, class: "text_field" %>
+      </div> 
 
-  <div class="field">
-    <%= f.label :nickname %><br />
-    <%= f.text_field :nickname %>
-  </div> 
+      <div class="field">
+        <%= f.label :email, class: "field_label" %>
+        <span class="require">必須</span>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "text_field" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="field">
+        <%= f.label :password, class: "field_label" %>
+        <span class="require">必須</span>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", class: "text_field" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password_confirmation, class: "field_label" %>
+        <span class="require">必須</span>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "text_field" %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "作成する
+        ", class: "button" %>
+      </div>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
