--- a/app/assets/stylesheets/_event.scss
+++ b/app/assets/stylesheets/_event.scss
@@ -1,7 +1,7 @@
 .event {
-  height: 300px;
-  width: 300px;
-  margin-right: 15px;
+  width: 48%;
+  padding: 20px;
+  margin: 14px;
   box-shadow: 0 0 8px gray;
   font-size: 15px;
 }
@@ -10,12 +10,12 @@
   font-size: 15px;
 }
 
-.event img {
-  display: block;
-  margin: 0 auto;
-  text-align: center;
+.event_left {
+  float: left;
 }
 
 .main-center {
   display: flex;
+  flex-wrap: wrap;
+  // flex-direction: row;
 }
