create_event_show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,5 @@
 @import "tempusdominus-bootstrap-4.css";
 @import "google_map";
 @import "events_new";
-@import "form"
+@import "form";
+@import "event_show";
