--- a/app/assets/stylesheets/_event.scss
+++ b/app/assets/stylesheets/_event.scss
@@ -4,6 +4,15 @@
   margin: 14px;
   box-shadow: 0 0 8px gray;
   font-size: 15px;
+  a {
+    text-decoration: none;
+    color: rgb(51, 51, 51);
+  }
+}
+
+.main-center__header {
+  text-align: center;
+  margin-top: 20px;
 }
 
 .event_start_time {
@@ -12,10 +21,30 @@
 
 .event_left {
   float: left;
+  margin-right: 20px;
+}
+
+.event_title {
+  margin-bottom: 10px;
+}
+
+.event_time {
+  margin-bottom: 20px;
+  p {
+    margin: 0;
+  }
+}
+
+
+.event_right {
+  float: left;
+  padding: 20px;
+  height: 100%;
+  border-left: 1px solid #DDD;
 }
 
 .main-center {
   display: flex;
   flex-wrap: wrap;
-  // flex-direction: row;
+  flex-direction: row;
 }
