--- a/app/views/top/_user.html.erb
+++ b/app/views/top/_user.html.erb
@@ -1,16 +1,28 @@
 <div class='user'>
-  <h3><%= user.nickname %></h3>
-  <% if user_signed_in? %>
-    <% if current_user != user %>
-      <% if user.followed_by?(current_user) %>
-        <%= link_to 'フォロー解除', user_relationships_path(user.id), method: :delete %>
-      <% else %>
-        <%= link_to 'フォローする', user_relationships_path(user.id), method: :post %>
-      <% end %>
+  <div class='user_top'>
+    <% unless user.icon.url.nil? %>
+      <div class='user_icon'>
+        <%= image_tag user.icon.url, width: 40, height: 40 %>
+      </div>
     <% end %>
-  <% else %>
-    <%= "フォロー" %>
-  <% end %>
-  <p><%= "フォロー数#{user.active_relationships.count}" %></p>
-  <p><%= "フォロワー数#{user.passive_relationships.count}" %></p>
+    <div class='user_name'>
+      <p class='name'><%= user.nickname %></p>
+    </div>
+    <div class='user_follow'>
+      <% if user_signed_in? %>
+        <% if current_user != user %>
+          <% if user.followed_by?(current_user) %>
+            <%= link_to 'フォロー解除', user_relationships_path(user.id), method: :delete %>
+          <% else %>
+            <%= link_to 'フォローする', user_relationships_path(user.id), method: :post %>
+          <% end %>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+  <div class='user_bottom'>
+    <%# <p><%= "フォロー数#{user.active_relationships.count}" %></p>
+    <%# <p><%= "フォロワー数#{user.passive_relationships.count}" %></p>
+    <%= user.introduction %>
+  </div>
 </div>
