--- a/app/assets/stylesheets/_user.scss
+++ b/app/assets/stylesheets/_user.scss
@@ -1,7 +1,26 @@
 .user {
   height: 300px;
   width: 300px;
-  margin-right: 15px;
+  margin: 15px;
   box-shadow: 0 0 8px gray;
   font-size: 15px;
+  padding: 20px;
+  &_top {
+    display: flex;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #DDD;
+  }
+}
+
+.user_icon img {
+  border-radius: 40%;
+  box-shadow: 0 2px 6px #c1ced7;
+  object-fit: cover;
+}
+
+.name {
+  font-weight: 600;
+  height: 40px;
+  line-height: 40px;
+  margin: 0 0 0 20px;
 }
