--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,6 +31,18 @@
         <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "text_field" %>
       </div>
 
+      <div class="field">
+        <%= f.label :icon, class: "field_label" %>
+        <span class="require">必須</span>
+        <%= f.file_field :icon, autocomplete: "new-password" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :introduction, class: "field_label" %>
+        <span class="require">必須</span>
+        <%= f.text_area :introduction, autocomplete: "new-password", class: "text_area" %>
+      </div>
+
       <div class="actions">
         <%= f.submit "作成する
         ", class: "button" %>
