--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
   <div class='event_show'>
     <div class='event_show_top'>
       <div class='event_show_left'>
-        <h3 class='title'>タイトル</h1>
+        <h3 class='title  margin-bottom'>タイトル</h1>
         <p><%= @event.title %></p>
         <div class='swiper-container'>
           <div class="swiper-wrapper">
@@ -20,8 +20,8 @@
       </div>
 
       <div class="event_show_center">
-        <h3 class='title'>開催場所</h3>
-        <%= @event.address %>
+        <h3 class='title  margin-bottom'>開催場所</h3>
+        <p><%= @event.address %></p>
         <div id='map' class='map'></div>
         <script>
           let mapInstance
@@ -46,15 +46,23 @@
       </div>
 
       <div class="event_show_right">
-        <h3 class='title'>詳細情報</h3>
+        <h3 class='title  margin-bottom'>詳細情報</h3>
         <p>参加人数/定員</p>
-        <%= @event.users.count.to_s + "/" + @event.capacity.to_s %>
-        <%= @event.start_time %>
-        <%= @event.end_time %>
+        <p><%= @event.users.count.to_s + "/" + @event.capacity.to_s %></p>
+        <p><%= "開始時間  #{@event.start_time}"%></p>
+        <p><%= "終了時間  #{@event.end_time}"%></p>
+        <p>タグ</p>
+        <% @event.content_list.each do |tag| %>
+          <span class="require"><%= tag %></span>
+        <% end %>
         <% if @event.users.include?(current_user) %>
-          <%= link_to 'この勉強会への参加を取り消す', exit_study_group_event_path(@event), method: :delete %>
+          <%= link_to exit_study_group_event_path(@event), method: :delete do %>
+            <p><button class="button-small">参加を取り消す</button></p>
+          <% end %>
         <% else %>
-          <%= link_to 'この勉強会に参加する', add_study_group_event_path(@event), method: :post %>
+          <%= link_to add_study_group_event_path(@event), method: :post do %>
+            <p><button class="button-small">参加する</button></p>
+          <% end %>
         <% end %>
       </div>
     </div>
