--- a/app/views/top/_event.html.erb
+++ b/app/views/top/_event.html.erb
@@ -13,6 +13,11 @@
       <p><%= event.users.count.to_s + "/" + event.capacity.to_s %></p>
       <span>開催場所</span>
       <p><%= event.address %></p>
+      <span>タグ</span>
+      <p></p>
+      <% event.content_list.each do |tag| %>
+        <span class="require"><%= tag %></span>
+      <% end %>
     </div>
   <% end %>
 </div>
