--- a/app/views/top/_user.html.erb
+++ b/app/views/top/_user.html.erb
@@ -12,9 +12,13 @@
       <% if user_signed_in? %>
         <% if current_user != user %>
           <% if user.followed_by?(current_user) %>
-            <%= link_to 'フォロー解除', user_relationships_path(user.id), method: :delete %>
+            <%= link_to user_relationships_path(user.id), method: :delete do %>
+              <button class="button-follow">解除</button>
+            <% end %>
           <% else %>
-            <%= link_to 'フォローする', user_relationships_path(user.id), method: :post %>
+            <%= link_to user_relationships_path(user.id), method: :post do %>
+              <button class="button-follow">フォロー</button>
+            <% end %>
           <% end %>
         <% end %>
       <% end %>
