--- a/app/assets/stylesheets/_slider.scss
+++ b/app/assets/stylesheets/_slider.scss
@@ -1,6 +1,6 @@
 .slider {
   height: 550px;
-  background-image: image-url("working_space.jpg");
+  background-image: image-url("working_space.png");
   background-size: 1440px 600px;
   background-repeat: no-repeat;
 }
