change_user_show_image

--- a/app/assets/stylesheets/_user_show.scss
+++ b/app/assets/stylesheets/_user_show.scss
@@ -7,7 +7,7 @@
   padding: 40px;
   margin: 30px auto 0;
   text-align: center;
-  background: url('cool-working-space.jpg');
+  background-image: image-url("cool-working-space.jpg");
   background-size: 1400px 430px;
   background-repeat: no-repeat;
 }
