--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,52 +1,54 @@
 <h1 class="event_new_title">アカウント作成</h1>
 <div class="form_conteiner">
   <div class="form_field">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="login_form">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-      <div class="field-first">
-        <%= f.label :nickname, class: "field_label" %>
-        <span class="require">必須</span>
-        <%= f.text_field :nickname, class: "text_field" %>
-      </div> 
+        <div class="field-first">
+          <%= f.label :nickname, class: "field_label" %>
+          <span class="require">必須</span>
+          <%= f.text_field :nickname, class: "text_field" %>
+        </div> 
 
-      <div class="field">
-        <%= f.label :email, class: "field_label" %>
-        <span class="require">必須</span>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "text_field" %>
-      </div>
+        <div class="field">
+          <%= f.label :email, class: "field_label" %>
+          <span class="require">必須</span>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "text_field" %>
+        </div>
 
-      <div class="field">
-        <%= f.label :password, class: "field_label" %>
-        <span class="require">必須</span>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password", class: "text_field" %>
-      </div>
+        <div class="field">
+          <%= f.label :password, class: "field_label" %>
+          <span class="require">必須</span>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password", class: "text_field" %>
+        </div>
 
-      <div class="field">
-        <%= f.label :password_confirmation, class: "field_label" %>
-        <span class="require">必須</span>
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "text_field" %>
-      </div>
+        <div class="field">
+          <%= f.label :password_confirmation, class: "field_label" %>
+          <span class="require">必須</span>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "text_field" %>
+        </div>
 
-      <div class="field">
-        <%= f.label :icon, class: "field_label" %>
-        <span class="require">必須</span>
-        <%= f.file_field :icon, autocomplete: "new-password" %>
-      </div>
+        <div class="field">
+          <%= f.label :icon, class: "field_label" %>
+          <span class="require">必須</span>
+          <%= f.file_field :icon, autocomplete: "new-password" %>
+        </div>
 
-      <div class="field">
-        <%= f.label :introduction, class: "field_label" %>
-        <span class="require">必須</span>
-        <%= f.text_area :introduction, autocomplete: "new-password", class: "text_area" %>
-      </div>
+        <div class="field">
+          <%= f.label :introduction, class: "field_label" %>
+          <span class="require">必須</span>
+          <%= f.text_area :introduction, autocomplete: "new-password", class: "text_area" %>
+        </div>
 
-      <div class="actions">
-        <%= f.submit "作成する
-        ", class: "button" %>
-      </div>
-    <% end %>
+        <div class="actions">
+          <%= f.submit "作成する", class: "button" %>
+        </div>
+      <% end %>
+      <%= render "test_login" %>
+    </div>
   </div>
 </div>
