--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
               </div>
             <% end %>
           <% else %>
-            <%= link_to new_user_session_path do %>
+            <%= link_to new_user_session_path, data: {turbolinks: false} do %>
               <div class='header_menu'>
                 ログイン
               </div>
