--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -55,13 +55,15 @@
         <% @event.content_list.each do |tag| %>
           <span class="require"><%= tag %></span>
         <% end %>
-        <% if @event.users.include?(current_user) %>
-          <%= link_to exit_study_group_event_path(@event), method: :delete do %>
-            <p><button class="button-small">参加を取り消す</button></p>
-          <% end %>
-        <% else %>
-          <%= link_to add_study_group_event_path(@event), method: :post do %>
-            <p><button class="button-small">参加する</button></p>
+        <% if @event.users.count != @event.capacity %>
+          <% if @event.users.include?(current_user) %>
+            <%= link_to exit_study_group_event_path(@event), method: :delete do %>
+              <p><button class="button-small">参加を取り消す</button></p>
+            <% end %>
+          <% else %>
+            <%= link_to add_study_group_event_path(@event), method: :post do %>
+              <p><button class="button-small">参加する</button></p>
+            <% end %>
           <% end %>
         <% end %>
       </div>
