--- a/app/views/top/_user.html.erb
+++ b/app/views/top/_user.html.erb
@@ -12,11 +12,11 @@
       <% if user_signed_in? %>
         <% if current_user != user %>
           <% if user.followed_by?(current_user) %>
-            <%= link_to user_relationships_path(user.id), method: :delete do %>
+            <%= link_to user_relationships_path(user.id), method: :delete, remote: true do %>
               <button class="button-follow">解除</button>
             <% end %>
           <% else %>
-            <%= link_to user_relationships_path(user.id), method: :post do %>
+            <%= link_to user_relationships_path(user.id), method: :post, remote: true do %>
               <button class="button-follow">フォロー</button>
             <% end %>
           <% end %>
