change_read_me_url

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <div class='header__left'>
         <%= link_to root_path do %>
           <div class='header__left__logo'>
-            sutudy_group!
+            sutudy_group
           </div>
         <% end %>
       </div>
