--- a/app/assets/stylesheets/_form.scss
+++ b/app/assets/stylesheets/_form.scss
@@ -69,6 +69,15 @@
   color: #fff;
 }
 
+.test_user_button {
+  margin-top: 30px;
+  width: 100%;
+  height: 50px;
+  background-color: skyblue;
+  border: 1px solid skyblue;
+  color: #fff;
+}
+
 .login_form {
   padding: 30px;
 }
